--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-API_BASE_URL=
+API_BASE_URL=https://apimvp.deepchainlabs.com/api/v1
+FILE_DRIVE=public
+FILE_DRIVE_TYPE=remote
+FILE_DRIVE_HOST=https://apimvp.deepchainlabs.com
